# sidecar-ai-docs

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MVP.md  README.md  REFLECTION.md  ROADMAP.md  SECURITY.md  STACK.md  STRUCTURE.md  USAGE.md  codecov.yml  mkdocs.yml
.github/workflows/: ci.yml
.sidecar/: index.sqlite
crates/sidecar-cli/: Cargo.toml
crates/sidecar-cli/src/: main.rs  output.rs
crates/sidecar-cli/src/cmd/: doc.rs  export.rs  index.rs  mcp.rs  mod.rs  refs.rs  search.rs  symbol.rs
crates/sidecar-core/: Cargo.toml
crates/sidecar-core/src/: doc_parser.rs  fingerprint.rs  indexer.rs  lib.rs  model.rs  query.rs  ranking.rs  repository.rs  uid.rs
crates/sidecar-core/tests/: index_and_query.rs
crates/sidecar-core/tests/snapshots/: index_and_query__search_results_snapshot.snap
crates/sidecar-mcp/: Cargo.toml
crates/sidecar-parsing/: Cargo.toml
crates/sidecar-storage/: Cargo.toml
crates/sidecar-types/: Cargo.toml
docs/: AI-DOCS-WORKFLOW.md  ANCHORING-SPEC.md  ARCHITECTURE-OVERVIEW.md  AST-DIFF-AND-REBASE.md  CLI-SPEC.md  CLI-UX-GUIDELINES.md  COMPATIBILITY.md  DATA-MODEL.md  DOCFX-ANALYSIS.md  DOXYGEN-ANALYSIS.md  EVALUATION-PLAN.md  EXISTING-TOOLS-ANALYSIS.md  GLOSSARY.md  IDE-INTEGRATION.md  INDEXING-SPEC.md  JETBRAINS-PLUGIN-SPEC.md  JSDOC-ANALYSIS.md  LSIF-SCIP-SPEC.md  LSP-SPEC.md  MANIFESTO.md  MCP-SERVER-DESIGN.md  MCP-SPEC.md  RELEVANCE-RANKING.md  SECURITY-MODEL.md  SELECTOR-MODEL.md  SIDECAR-FORMAT.md  SIDECAR-MKDOCS-EXPORTER-PLAN.md  SPHINX-ANALYSIS.md  STORAGE-SPEC.md  TEST-VECTORS.md  TOKEN-ECONOMY-STRATEGY.md  TREE-SITTER-SPEC.md  UID-AND-XREF-MODEL.md  VISION.md  VSCODE-EXTENSION-SPEC.md  index.md
docs-sidecar/symbols/: doc-index-project.md  (+5 more)
(+44 files in other folders)
