[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
sidecar-types = { path = "crates/sidecar-types" }
sidecar-parsing = { path = "crates/sidecar-parsing" }
sidecar-core = { path = "crates/sidecar-core" }
sidecar-storage = { path = "crates/sidecar-storage" }
sidecar-mcp = { path = "crates/sidecar-mcp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
blake3 = "1"
walkdir = "2"

[workspace.dependencies.insta]
version = "1"
features = ["yaml"]

[workspace.dependencies.tempfile]
version = "3"
