[package]
name = "sidecar-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
sidecar-types = { workspace = true }
sidecar-core = { workspace = true }
sidecar-parsing = { workspace = true }
sidecar-storage = { workspace = true }
sidecar-mcp = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
