[package]
name = "sidecar-core"
version.workspace = true
edition.workspace = true

[dependencies]
sidecar-types = { workspace = true }
sidecar-parsing = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
sidecar-storage = { workspace = true }
